# saa-revived

./: .env  .gitignore  Pipfile  captcha_snippet.py  controller.py  mailbox.py  non-gui-example.py  pyproject.toml  recaptcha.py  start.bat  steamreg.py
examples/: test_capmonster.py  test_twocaptcha.py
steampy/: utils.py
tests/: test_anticaptcha.py  test_capmonster.py  test_twocaptcha.py
webserver/website/: index.html
